# agentic-job-matcher

./: .env  README.md  main.py  pyproject.toml
backend/: main.py
backend/services/: ingestion.py
frontend/: app.py
